--- a/index.html
+++ b/index.html
@@ -1,8 +1,9 @@
 <!Doctype html>
-<html>
+<html lang="en">
 <head>
   <title>Odin Recipes Coffee</title>
   <meta charset = "UTF-8"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link href = "index.css" rel = "stylesheet">
 </head>
 <body>
