--- a/index.html
+++ b/index.html
@@ -10,7 +10,16 @@
   <h1 id = "header">Odin Recipes</h1>
   <h2 id = "images">Coffees and Teas</h3>
   <div id = "top">
+    <img id = "middleRecipe" src="">
+    <a id = "middleOverlay" href = "breakfast.html"></a>
+  </div>
+  <div id = "middle">
     <img id = "topRecipe" src="">
-    <a id = "topOverlay" href = ""></a>
+    <a id = "topOverlay" href = "lunch.html"></a>
+  </div>
+  <div id = "bottom">
+   <img id = "bottomRecipe" src="">
+   <a id = "bottomOverlay" href = "drinks.html"></a>
+  </div>
 </body>
  </html>
