--- a/breakfast.html
+++ b/breakfast.html
@@ -12,10 +12,15 @@
   <div class = description>
     <img src = "resource/buttered-toast-with-egg">
     <h2 class =  header>Description</h2>
-    <p>A simple sunny side egg on buttered toast.<p>
+    <p>A simple sunny side egg on avacado buttered toast.<p>
+    <h3 class = steps>How to cook it</h3>
     <ul>
       <li>Heat up a wok/pan</li>
-      <li>
+      <li>Place a small silver of butter onto the hot pan and coat it</li>
+      <li>Butter up both sides of a slice of bread</li>
+      <li>Place the bread on the pan and lightly toast both sides, till it is a little light brown</li>
+      <li>Take the bread out and place it on a plate</li>
+    </ul>
   </div>
 </body>
 </html>
