--- a/breakfast.html
+++ b/breakfast.html
@@ -10,7 +10,7 @@
     <h1>A simple egg & toast sandwich</h1>
   </div>
   <div class = description>
-    <img src = "resource/buttered-toast-with-egg">
+    <img src = "recipes/buttered-toast-with-egg.jpg">
     <h2 class =  header>Description</h2>
     <p>A simple sunny side egg on avacado buttered toast.<p>
     <h3 class = steps>How to cook it</h3>
