--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
   <h1 id = "header">Odin Recipes</h1>
   <h2 id = "images">Coffees and Teas</h3>
   <div id = "top">
-    <img id = "topRecipe" src="recipes/breakfeast.html">
-    <a id = "middleOverlay" href = "breakfast.html"></a>
+    <img id = "topRecipe" src="recipes/Avocado-Toast-with-Egg-5.jpg">
+    <a id = "middleOverlay" href = "recipes/breakfast.html"></a>
   </div>
   <div id = "middle">
     <img id = "middleRecipe" src="recipes/lunch.html">
