--- a/breakfast.html
+++ b/breakfast.html
@@ -10,7 +10,7 @@
     <h1>A simple egg & toast sandwich</h1>
   </div>
   <div class = description>
-    <img src = "recipes/Avocado-Toast-with-Egg-5.jpg">
+    <img src = "Avocado-Toast-with-Egg-5.jpg">
     <h2 class =  header>Description</h2>
     <p>A simple sunny side egg on avacado buttered toast.<p>
     <h3 class = steps>How to cook it</h3>
@@ -23,4 +23,9 @@
     </ul>
   </div>
 </body>
+<footer>
+  <div id = "going-back">
+    <a href = ""></a>
+      </div>
+</footer>
 </html>
