--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
   <h1 id = "header">Odin Recipes</h1>
   <h2 id = "images">Coffees and Teas</h3>
   <div id = "top">
-    <img id = "topRecipe" src="recipes/Avocado-Toast-with-Egg-5.jpg">
-    <a id = "middleOverlay" href = "recipes/breakfast.html"></a>
+    <img id = "topRecipe" src="Avocado-Toast-with-Egg-5.jpg">
+    <a id = "middleOverlay" href = "breakfast.html"></a>
   </div>
   <div id = "middle">
-    <img id = "middleRecipe" src="recipes/lunch.html">
+    <img id = "middleRecipe" src="lunch.html">
     <a id = "topOverlay" href = "lunch.html"></a>
   </div>
   <div id = "bottom">
