--- a/recipes/breakfast.html
+++ b/recipes/breakfast.html
@@ -7,10 +7,10 @@
   <link href = "breakfast.css" rel = "stylesheets">
 </head>
 <body>
-  <div class = header>
+  <div class = "header">
     <h1>A simple egg & toast sandwich</h1>
   </div>
-  <div class = description>
+  <div class = "description">
     <img src = "../Avocado-Toast-with-Egg-5.jpg">
     <h2 class =  header>Description</h2>
     <p>A simple sunny side egg on avacado buttered toast.<p>
