--- a/index.html
+++ b/index.html
@@ -7,19 +7,21 @@
   <link href = "index.css" rel = "stylesheet">
 </head>
 <body>
-  <h1 id = "header">Odin Recipes</h1>
-  <h2 id = "images">Coffees and Teas</h3>
-  <div id = "top">
-    <img id = "topRecipe" src="Avocado-Toast-with-Egg-5.jpg">
-    <a id = "middleOverlay" href = "breakfast.html"></a>
+  <h1>Odin Recipes</h1>
+  <h2>Coffees and Teas</h2>
+  <div class = "top">
+    <img class = "topRecipe" src="Avocado-Toast-with-Egg-5.jpg">
+    <a class = "topOverlay" href = "recipes/breakfast.html"></a>
   </div>
-  <div id = "middle">
-    <img id = "middleRecipe" src="lunch.html">
-    <a id = "topOverlay" href = "lunch.html"></a>
+  <div class = "middle">
+    <img class = "middleRecipe" src="lunch.jpg">
+    <a class = "middleOverlay" href = "recipes/lunch.html"></a>
   </div>
-  <div id = "bottom">
-   <img id = "bottomRecipe" src="">
-   <a id = "bottomOverlay" href = "drinks.html"></a>
+  <div class = "bottom">
+   <img class = "bottomRecipe" src="coffee.jpg">
+   <a class = "bottomOverlay" href = "recipes/drinks.html"></a>
   </div>
 </body>
- </html>
+<footer>
+  
+</html>
