--- a/index.html
+++ b/index.html
@@ -1,14 +1,14 @@
 <!Doctype html>
 <html lang="en">
 <head>
-  <title>Odin Recipes Coffee</title>
+  <title>Odin Recipes</title>
   <meta charset = "UTF-8"/>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link href = "index.css" rel = "stylesheet">
 </head>
 <body>
   <h1>Odin Recipes</h1>
-  <h2>Coffees and Teas</h2>
+  <h2>Selection</h2>
   <div class = "top">
     <img class = "topRecipe" src="Avocado-Toast-with-Egg-5.jpg">
     <a class = "topOverlay" href = "recipes/breakfast.html"></a>
