--- a/index.html
+++ b/index.html
@@ -7,19 +7,21 @@
   <link href = "index.css" rel = "stylesheet">
 </head>
 <body>
-  <h1>Odin Recipes</h1>
-  <h2>Selection</h2>
-  <div class = "top">
-    <img class = "topRecipe" src="Avocado-Toast-with-Egg-5.jpg">
-    <a class = "topOverlay" href = "recipes/breakfast.html"></a>
-  </div>
-  <div class = "middle">
-    <img class = "middleRecipe" src="lunch.jpg">
-    <a class = "middleOverlay" href = "recipes/lunch.html"></a>
-  </div>
-  <div class = "bottom">
-   <img class = "bottomRecipe" src="coffee.jpg">
-   <a class = "bottomOverlay" href = "recipes/drinks.html"></a>
+  <div class = "container">
+    <h1>Odin Recipes</h1>
+    <h2>Selection</h2>
+    <div class = "top">
+      <img class = "topRecipe" src="Avocado-Toast-with-Egg-5.jpg">
+      <a class = "topOverlay" href = "recipes/breakfast.html"></a>
+    </div>
+    <div class = "middle">
+      <img class = "middleRecipe" src="lunch.jpg">
+      <a class = "middleOverlay" href = "recipes/lunch.html"></a>
+    </div>
+    <div class = "bottom">
+    <img class = "bottomRecipe" src="coffee.jpg">
+     <a class = "bottomOverlay" href = "recipes/drinks.html"></a>
+    </div>
   </div>
 </body>
 <footer>
