--- a/recipes/breakfast.html
+++ b/recipes/breakfast.html
@@ -14,7 +14,7 @@
     <img src = "../Avocado-Toast-with-Egg-5.jpg">
     <h2>Description</h2>
     <p>A simple sunny side egg on avacado buttered toast.<p>
-    <h3 class = "steps">How to cook it</h3>
+    <h3>How to cook it</h3>
     <ol>
       <li>Heat up a wok/pan</li>
       <li>Place a small silver of butter onto the hot pan and coat it</li>
