--- a/index.html
+++ b/index.html
@@ -12,15 +12,15 @@
     <h2>Selection</h2>
     <div class = "top">
       <img class = "topRecipe" src="Avocado-Toast-with-Egg-5.jpg">
-      <a class = "topOverlay" href = "recipes/breakfast.html"></a>
+      <a class = "topOverlay" href = "recipes/breakfast.html">Breakfast</a>
     </div>
     <div class = "middle">
       <img class = "middleRecipe" src="lunch.jpg">
-      <a class = "middleOverlay" href = "recipes/lunch.html"></a>
+      <a class = "middleOverlay" href = "recipes/lunch.html">Lunch</a>
     </div>
     <div class = "bottom">
     <img class = "bottomRecipe" src="coffee.jpg">
-     <a class = "bottomOverlay" href = "recipes/drinks.html"></a>
+     <a class = "bottomOverlay" href = "recipes/drinks.html">Drinks</a>
     </div>
   </div>
 </body>
