--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       <a class = "middleOverlay" href = "recipes/lunch.html">Lunch</a>
     </div>
     <div class = "bottom">
-    <img class = "bottomRecipe" src="coffee.jpg">
+    <img class = "bottomRecipe" src="drinks.webp">
      <a class = "bottomOverlay" href = "recipes/drinks.html">Drinks</a>
     </div>
   </div>
