--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       <a class = "topOverlay" href = "recipes/breakfast.html">Breakfast</a>
     </div>
     <div class = "middle">
-      <img class = "middleRecipe" src="lunch.jpg">
+      <img class = "middleRecipe" src="cheese sandwich.jfif">
       <a class = "middleOverlay" href = "recipes/lunch.html">Lunch</a>
     </div>
     <div class = "bottom">
