--- a/recipes/lunch.html
+++ b/recipes/lunch.html
@@ -7,6 +7,7 @@
     <link href="lunch.css" rel = "stylesheet">
   </head>
   <body>
-    <h1>Lunch items</h1>
+    <h1>A simple grilled cheese sandwich</h1>
+    
   </body>
   </html>
