--- a/recipes/breakfast.html
+++ b/recipes/breakfast.html
@@ -8,12 +8,12 @@
 </head>
 <body>
   <div class = "header">
-    <h1>A simple egg & toast sandwich</h1>
+    <h1>A simple avocado & toast sandwich</h1>
   </div>
   <div class = "description">
     <img src = "../Avocado-Toast-with-Egg-5.jpg">
     <h2>Description</h2>
-    <p>A simple sunny side egg on avacado buttered toast.<p>
+    <p>A simple sunny side egg on avocado buttered toast.<p>
     <h3>How to cook it</h3>
     <ol>
       <li>Heat up a wok/pan</li>
@@ -21,6 +21,8 @@
       <li>Butter up both sides of a slice of bread</li>
       <li>Place the bread on the pan and lightly toast both sides, till it is a little light brown</li>
       <li>Take the bread out and place it on a plate</li>
+      <li>Take a few ripe avocados and mash them</li>
+      
     </ol>
   </div>
   <div id = "going-back">
