--- a/recipes/drinks.html
+++ b/recipes/drinks.html
@@ -7,20 +7,40 @@
     <title>Drinks</title>
   </head>
   <body>
-    <h1>Pumpkin Latte Spice Bombs</h1>
+    <h1>Easy Apple Cider</h1>
     <div class = "description">
-      <p>Inspired by cocoa bombs, these latte bombs are loaded with instant coffee 
-        and pumpkin pie spice on the inside for a fun DIY latte. The white chocolate 
-        sweetens the coffee perfectly — just add a dollop of whipped cream and sprinkle 
-        with pumpkin pie spice (or a drizzle of caramel) for the ideal latte consistency.
+      <p>This apple cider recipe is super easy to make. 
+        I used to buy the spices already mixed at the grocery store, 
+        and they stopped carrying them, so I just made my own. 
+        Great for a shower or get-together, and the slow cooker 
+        keeps it warm so guests can enjoy it through the night! 
+        Serve with a slice of orange, and add spiced rum, if desired.
         (Taken from allrecipes.com)
       </p>
       <img src = "../drinks.webp">
     </div>
-    
-    
+    <div class = "ingredients">
+      <h2>Stuff that you need to make the Easy Apple Cider.</h2>
+      <ul>
+        <li>1 (64 fluid ounce/1.9 litre) bottle of apple cider.</li>
+        <li>3 cinnamon sticks </li>
+        <li>1 teaspoon of whole allspice (also known as Jamaica pepper/myrtle pepper)</li>
+        <li>1 teaspoon of whole cloves</li>
+        <li>1/3 cup of brown sugar</li>
+      </ul>
+    </div>
+    <div class = "steps">
+      <h2>How to make the Easy Apple Cider</h2>
+      <ol>
+        <li>Combine apple cider & cinnamon sticks in a slow cooker.</li>
+        <li>Place allspice and cloves onto the center of an 8-inch square piece of cheesecloth. 
+          Gather edges of the cheesecloth together and tie to secure; place in the slow cooker. </li>
+        <li>Stir in brown sugar. Cook on High until it comes to a boil. 
+          Reduce heat to Low and keep warm.</li>
+      </ol>
+    </div>
     <div id = "going-back">
-    <a href = "../index.html">Return to the landing page</a>
+      <a href = "../index.html">Return to the landing page</a>
    </div>
   </body>
 </html>
