--- a/recipes/breakfast.html
+++ b/recipes/breakfast.html
@@ -14,6 +14,17 @@
     <img src = "../Avocado-Toast-with-Egg-5.jpg">
     <h2>Description</h2>
     <p>A simple sunny side egg on avocado buttered toast.<p>
+  </div>
+  <div class = "ingredients">
+    <h2>Stuff that you need</h2>
+    <ul>
+      <li>An egg</li>
+      <li>A ripe avocado</li>
+      <li>Some unsalted butter<li>
+      <li>A slice of bread (can be any brand</li>
+      </ol>
+  </div>
+  <div class = "steps">
     <h3>How to cook it</h3>
     <ol>
       <li>Heat up a wok/pan</li>
@@ -22,7 +33,10 @@
       <li>Place the bread on the pan and lightly toast both sides, till it is a little light brown</li>
       <li>Take the bread out and place it on a plate</li>
       <li>Take a few ripe avocados and mash them</li>
-      
+      <li>Spread the mashed avocado across the bread</li>
+      <li>Crack an egg and cook it on a hot pan</li>
+      <li>After cooking the egg for a while (add salt/pepper to taste), wait till it's egg white is white, then take it off the pan</li>
+      <li>Place the sunny side egg on your avocado toast and enjoy</li>
     </ol>
   </div>
   <div id = "going-back">
