--- a/recipes/lunch.html
+++ b/recipes/lunch.html
@@ -1,13 +1,5 @@
 <!DOCTYPE html>
-<html>
-  <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Lunch menu</title>
-    <link href="lunch.css" rel = "stylesheet">
-  </head>
-  <body>
-    <h1>A simple grilled cheese sandwich</h1>
-    
-  </body>
-  </html>
+<html lang = "en">
+<head>
+
+</html>
