--- a/recipes/breakfast.html
+++ b/recipes/breakfast.html
@@ -11,8 +11,8 @@
     <h1>A simple avocado & toast sandwich</h1>
   </div>
   <div class = "description">
-    <img src = "../Avocado-Toast-with-Egg-5.jpg">
     <h2>Description</h2>
+    <img src = "../Avocado-Toast-with-Egg-5.jpg">
     <p>A simple sunny side egg on avocado buttered toast.<p>
   </div>
   <div class = "ingredients">
@@ -20,9 +20,9 @@
     <ul>
       <li>An egg</li>
       <li>A ripe avocado</li>
-      <li>Some unsalted butter<li>
-      <li>A slice of bread (can be any brand</li>
-      </ol>
+      <li>Some unsalted butter</li>
+      <li>A slice of bread (can be any brand)</li>
+     </ul>
   </div>
   <div class = "steps">
     <h3>How to cook it</h3>
@@ -41,7 +41,7 @@
   </div>
   <div id = "going-back">
     <a href = "../index.html">Return to the landing page</a>
-   </div>
+  </div>
 </body>
 </html>
 
