--- a/index.html
+++ b/index.html
@@ -25,5 +25,11 @@
   </div>
 </body>
 <footer>
-  
+  <div id = "projectBy">
+      Recipe project by: Lyrenide
+      <a id = "TOPLink" target = "_blank" href = "https://www.theodinproject.com/about">
+        <img id = "TOP" src = "resources/theOdinProject.png">
+       </a>
+  </div>
+  </footer>
 </html>
