--- a/index.html
+++ b/index.html
@@ -26,10 +26,10 @@
 </body>
 <footer>
   <div id = "projectBy">
-      Recipe project by: Lyrenide
+      Project Recipe completed by: Jacqueline
       <a id = "TOPLink" target = "_blank" href = "https://www.theodinproject.com/about">
-        <img id = "TOP" src = "resources/theOdinProject.png">
+        <img id = "TOP" src = "theOdinProject.png">
        </a>
   </div>
-  </footer>
+</footer>
 </html>
