--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
   </div>
 </body>
 <footer>
-  <div id = "projectBy">
+  <div class = "projectBy">
       Project Recipe completed by: Jacqueline
       <a id = "TOPLink" target = "_blank" href = "https://www.theodinproject.com/about">
         <img id = "TOP" src = "theOdinProject.png">
