--- a/index.html
+++ b/index.html
@@ -11,15 +11,15 @@
     <h1>Odin Recipes</h1>
     <h2>Selection</h2>
     <div class = "top">
-      <img class = "topRecipe" src="Avocado-Toast-with-Egg-5.jpg">
+      <img src="Avocado-Toast-with-Egg-5.jpg">
       <a class = "topOverlay" href = "recipes/breakfast.html">Breakfast</a>
     </div>
     <div class = "middle">
-      <img class = "middleRecipe" src="cheese sandwich.jfif">
+      <img src="cheese sandwich.jfif">
       <a class = "middleOverlay" href = "recipes/lunch.html">Lunch</a>
     </div>
     <div class = "bottom">
-    <img class = "bottomRecipe" src="drinks.webp">
+    <img src="drinks.webp">
      <a class = "bottomOverlay" href = "recipes/drinks.html">Drinks</a>
     </div>
   </div>
