--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 </body>
 <footer>
   <div class = "projectBy">
-      Project Recipe completed by: Jacqueline
+    <p>Project Recipe completed by: Jacqueline</p>
       <a id = "TOPLink" target = "_blank" href = "https://www.theodinproject.com/about">
         <img id = "TOP" src = "theOdinProject.png">
        </a>
