--- a/index.html
+++ b/index.html
@@ -22,10 +22,10 @@
      <a class = "bottomOverlay" href = "recipes/drinks.html">Drinks</a>
     </div>
     <div class = "projectBy">
-      <p>Project Recipe completed by: Jacqueline</p>
+      <p>Project done by: Jacqueline</p>
       <a id = "TOPLink" target = "_blank" href = "https://www.theodinproject.com/about">
         <img id = "TOP" src = "theOdinProject.png">
-       </a>
+      </a>
     </div>
   </div>
 </body>
