--- a/index.html
+++ b/index.html
@@ -21,11 +21,13 @@
     <img src="drinks.webp">
      <a class = "bottomOverlay" href = "recipes/drinks.html">Drinks</a>
     </div>
-    <div class = "projectBy">
-      <p>Project done by: Jacqueline</p>
-      <a id = "TOPLink" target = "_blank" href = "https://www.theodinproject.com/about">
-        <img id = "TOP" src = "theOdinProject.png">
-      </a>
+    <div class = "description">
+      <div class = "projectBy">
+        <p>Project done by: Jacqueline</p>
+        <a id = "TOPLink" target = "_blank" href = "https://www.theodinproject.com/about">
+          <img id = "TOP" src = "theOdinProject.png">
+        </a>
+      </div>
     </div>
   </div>
 </body>
