--- a/index.html
+++ b/index.html
@@ -9,25 +9,25 @@
 <body>
   <div class = "container">
     <h1>Odin Recipes</h1>
-    <div class = "top">
-      <img src="Avocado-Toast-with-Egg-5.jpg">
-      <a class = "topOverlay" href = "recipes/breakfast.html">Breakfast</a>
-    </div>
-    <div class = "middle">
-      <img src="cheese sandwich.jfif">
-      <a class = "middleOverlay" href = "recipes/lunch.html">Lunch</a>
-    </div>
-    <div class = "bottom">
-    <img src="drinks.webp">
-     <a class = "bottomOverlay" href = "recipes/drinks.html">Drinks</a>
-    </div>
     <div class = "description">
       <div class = "projectBy">
-        <p>Project done by: Jacqueline</p>
+        <p>Project completed by: Jacqueline</p>
         <a id = "TOPLink" target = "_blank" href = "https://www.theodinproject.com/about">
           <img id = "TOP" src = "theOdinProject.png">
         </a>
       </div>
+    </div>
+    <div class = "top">
+      <img src = "Avocado-Toast-with-Egg-5.jpg">
+      <a href = "recipes/breakfast.html">Breakfast</a>
+    </div>
+    <div class = "middle">
+      <img src = "cheese sandwich.jfif">
+      <a href = "recipes/lunch.html">Lunch</a>
+    </div>
+    <div class = "bottom">
+      <img src = "drinks.webp">
+      <a href = "recipes/drinks.html">Drinks</a>
     </div>
   </div>
 </body>
